// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CombinedReportRulesOnlySections CombinedReportNotApplicableSection renders 1`] = `
"<div className=\\"result-section\\">
  <div id=\\"collapsible-header\\">
    <CombinedResultSectionTitle outcomeCount={0} outcomeType=\\"inapplicable\\" title=\\"Not applicable rules\\" titleSize=\\"title\\" />
  </div>
  <div id=\\"collapsible-content\\">
    <RulesOnly deps={{...}} cardRuleResults={{...}} outcomeType=\\"inapplicable\\" />
  </div>
</div>"
`;

exports[`CombinedReportRulesOnlySections CombinedReportPassedSection renders 1`] = `
"<div className=\\"result-section\\">
  <div id=\\"collapsible-header\\">
    <CombinedResultSectionTitle outcomeCount={0} outcomeType=\\"pass\\" title=\\"Passed rules\\" titleSize=\\"title\\" />
  </div>
  <div id=\\"collapsible-content\\">
    <RulesOnly deps={{...}} cardRuleResults={{...}} outcomeType=\\"pass\\" />
  </div>
</div>"
`;
